@@ -1,3 +1,15 @@
+2004-04-26  Bruno Haible  <bruno@clisp.org>
+
+	* clos-class2.lisp (std-compute-cpl): Use "the list" declaration,
+	to enable compiler optimization.
+	* clos-class5.lisp (valid-make-instance-keywords,
+	valid-reinitialize-instance-keywords,
+	valid-update-instance-for-redefined-class-keywords,
+	valid-update-instance-for-different-class-keywords): Likewise.
+	* clos-genfun2.lisp (compute-dispatch): Likewise.
+	* clos-genfun5.lisp (compute-applicable-methods): Likewise.
+	* clos-methcomb3.lisp (standard-method-combination-expander): Likewise.
+
 2004-05-23  Sam Steingold  <sds@gnu.org>
 
 	allow () to match NIL in destructuring lambda lists
